# ull-esit-inf-daa-1819-pract1-Dibad

./: .gitignore  .project  CMakeLists.txt  README.md  build.gradle  output.txt  settings.gradle
docs/: allclasses-frame.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-search-index.js
docs/Ramsim/: Ramsim.html  package-frame.html  package-summary.html  package-tree.html
docs/Ramsim/Alu/: Alu.html  package-frame.html  package-tree.html
docs/Ramsim/Instruction/: InstructId.html  package-summary.html
docs/Ramsim/Instruction/Operand/: DirectDirOperand.html  package-summary.html  package-tree.html
docs/Ramsim/Io/: Unit.html  package-summary.html  package-tree.html
docs/Ramsim/Memory/: Memory.html  package-frame.html
docs/javadoc/: allclasses-noframe.html  constant-values.html  element-list  member-search-index.js  overview-frame.html  overview-summary.html  type-search-index.js
docs/javadoc/Ramsim/: App.html
docs/javadoc/Ramsim/Alu/: package-summary.html
docs/javadoc/Ramsim/Instruction/: Opcode.html  package-frame.html  package-tree.html
docs/javadoc/Ramsim/Io/: InputUnit.html  OutputUnit.html  package-frame.html
docs/javadoc/Ramsim/Memory/: package-summary.html  package-tree.html
src/: Alu.h  Memory.h
src/main/java/Ramsim/: App.java  Memory.java  Ramsim.java
src/test/java/Ramsim/: AluTest.java  AppTest.java  InputUnitTest.java  MemoryTest.java  OperandTest.java  RamsimTest.java  UnitTest.java  input.txt
tests_ram/: division.ram  power.ram  test1.ram  test2.ram  test3.ram  test4.ram  test5.ram
(+23 files in other folders)
